Kubernetest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-io-app-svc
  # annotations:
  #   alb.ingress.kubernetes.io/healthcheck-path: /user
spec:
  type: NodePort
  selector:
    app: socket-io-app
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      nodePort: 30007
